--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="A hospital static website."/>
         <meta name="keywords" content="medical, hospital, healthcare, health, chrislevestonweb"/>
         <title>Home | The Medical Center</title>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/9c3656a23f.js" crossorigin="anonymous"></script>
         <link rel="icon" type="image/png" href="https://www.freepngimg.com/thumb/heart/36704-5-dark-red-heart-transparent-background.png"/>
         <link rel="stylesheet" type="text/css" href="./src/styles/index.css"/>
@@ -122,5 +123,25 @@
                 </div>
             </div>
         </section>
+        
+
+        <!-- Donny Prompt -->
+
+
+        <div class="donny-chatbox">
+            <div class="chatbox-header">
+                <i class="fas fa-comments"></i>
+                <h4>Chat</h4>
+                <div class="min-close-area">
+                    <i class="far fa-window-minimize"></i>
+                    <i class="fas fa-times"></i>
+                </div>
+            </div>
+            <div class="prompt-text-area">
+
+            </div>
+        </div>
+
+        <script src="./src/scripts/index.js"></script>
     </body>
 </html>
