Added the Donny chatbox along with the styling with text and a textbox inside of the donny chatbox.

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 
 
         <div class="donny-chatbox">
+            <!-- Chat Box Header -->
             <div class="chatbox-header">
                 <i class="fas fa-comments"></i>
                 <h4>Chat</h4>
@@ -137,8 +138,16 @@
                     <i class="fas fa-times"></i>
                 </div>
             </div>
-            <div class="prompt-text-area">
+            <!-- The Chat Box Text Area -->
+            <div class="chatbox-text-area">
+                <!-- The actual chat. -->
+                <div class="chat">
 
+                </div>
+                <!-- The client typing area -->
+                <form>
+                    <textarea type="textarea" name="chatbox-textarea"></textarea>
+                </form>
             </div>
         </div>
 
