--- a/index.html
+++ b/index.html
@@ -145,12 +145,11 @@
 
                 </div>
                 <!-- The client typing area -->
-                <form>
-                    <textarea type="textarea" name="chatbox-textarea"></textarea>
-                </form>
+                <textarea class="textarea" type="textarea" name="chatbox-textarea"></textarea>
+                <button>Send</button>
             </div>
         </div>
 
-        <script src="./src/scripts/index.js"></script>
+        <script src="./src/scripts/chatbox.js"></script>
     </body>
 </html>
