Added the Member Discount Section with a navigation.

--- a/index.html
+++ b/index.html
@@ -123,6 +123,40 @@
                 </div>
             </div>
         </section>
+
+        <!-- Member Discount Area -->
+
+        <section class="member-discount-area">
+            <div class="member-discount-title-area">
+                <h2>MEMBER DISCOUNTS</h2>
+                <p>
+                    Center365 offers all members access to our exclusive discounts on health and wellness products
+                    and services.
+                </p>
+            </div>
+            <div class="member-discount-nav">
+                <a href="#">
+                    <div class="member-nav-container">
+                        <div>Visit Center365<i class="fas fa-chevron-right"></i></div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="member-nav-container">
+                        <div>Get Started<i class="fas fa-chevron-right"></i></div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="member-nav-container">
+                        <div>How It Works<i class="fas fa-chevron-right"></i></div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="member-nav-container">
+                        <div>Frequently Asked Questions<i class="fas fa-chevron-right"></i></div>
+                    </div>
+                </a>
+            </div>
+        </section>
         
 
         <!-- Donny Prompt -->
