Added a javascript file for making some of the content on the website reactive through javascript functions

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <!-- The virtual assistant photo area -->
                 <div class="virtual-assistant-area">
                     <div class="virtual-assistant-image"></div>
-                    <p>Ask <span>Donny</span><br/>our virtual assistant</p>
+                    <p>Ask <span id="virtualAssistantName"></span><br/>our virtual assistant</p>
                 </div>
                 <!-- The search bar form -->
                 <div class="searchbar searchbar-area">
@@ -157,6 +157,44 @@
                 </a>
             </div>
         </section>
+
+        <section class="save-on-area">
+            <div class="save-on">
+                <p>Save on product and services.</p>
+            </div>
+            <div class="save-on-nav">
+                <div>
+                    <i class="fas fa-piggy-bank"></i><br>
+                    Financial Health
+                </div>
+                <div>
+                    <i class="fas fa-heartbeat"></i><br>
+                    Fitness
+                </div>
+                <div>
+                    <i class="fas fa-utensils"></i><br>
+                    Healthy Eating
+                </div>
+                <div>
+                    <i class="fas fa-plane"></i><br>
+                    Lifestyle
+                </div>
+                <div>
+                    <i class="fas fa-hand-holding-medical"></i><br>
+                    Personal Care
+                </div>
+                <div>
+                    <i class="fas fa-spa"></i><br>
+                    Wellness
+                </div>
+            </div>
+        </section>
+
+        <section class="members-section">
+            <div class="changing-coverage">
+                <h2>Are you changing coverage?</h2>
+            </div>
+        </section>
         
 
         <!-- Donny Prompt -->
@@ -185,5 +223,6 @@
         </div>
 
         <script src="./src/scripts/chatbox.js"></script>
+        <script src="src/scripts/reactive.js"></script>
     </body>
 </html>
