Adding a community section on the front page

--- a/index.html
+++ b/index.html
@@ -298,12 +298,14 @@
         </table>
     </section>
 
-    <section class="members-section">
-        <div class="changing-coverage">
-            <h2>Are you changing coverage?</h2>
-        </div>
-    </section>
-
+   <!-- Connect with the community -->
+   <section class="connect-community-section">
+    <div class="title-text-content">
+        <h2>Connect With Our Community</h2>
+        <p>Ask questions and get answers. Watch videos. Explore many topics that others are interested in.</p>
+        <a href="#" target="_blank"><button>connect</button></a>
+    </div> 
+   </section>
 
     <!-- Donny Prompt -->
 
